_includes/manuals/1.14/4.3.7_smartproxy_puppetca.md

Activate the Puppet CA management module within the Smart Proxy instance.  This is used to manage the autosign configuration and handle listing, signing and revocation of individual certificates.

This should only be enabled in the Smart Proxy that is hosted on the machine responsible for providing certificates to your puppet clients. You would expect to see a directory **/var/lib/puppet/ssl/ca** on such a host.

<pre>
:enabled: https
</pre>

If your puppet SSL directory is located elsewhere, you'll need to set 'ssldir' as well.
<pre>
:ssldir: /etc/puppet/ssl
</pre>

The 'puppetdir' setting is used to find autosign.conf:

<pre>
:puppetdir: /etc/puppet
</pre>

The proxy requires write access to the puppet autosign.conf file, which is usually owner and group puppet, and has mode 0644 according to the puppet defaults.

Under a Puppet 4 AIO installation, paths should be set to:

<pre>
:ssldir: /etc/puppetlabs/puppet/ssl
:puppetdir: /etc/puppetlabs/puppet
</pre>

Ensure the foreman-proxy user is added to the puppet group ( e.g. `gpasswd -a foreman-proxy puppet` or `usermod -aG puppet foreman-proxy`)

puppet.conf:
<pre>
[master]
autosign = $confdir/autosign.conf {owner = service, group = service, mode = 664 }
</pre>

sudo access for the proxy is required - in your sudoers file ensure you allow the "puppet cert" command with NOPASSWD and without requiretty.

Under a Puppet 4 AIO installation, configuration should be:

<pre>
foreman-proxy ALL = NOPASSWD: /opt/puppetlabs/bin/puppet cert *
Defaults:foreman-proxy !requiretty
</pre>

Under a non-AIO Puppet installation:

<pre>
foreman-proxy ALL = NOPASSWD: /usr/bin/puppet cert *
Defaults:foreman-proxy !requiretty
</pre>

For older versions of Puppet (2.x) with separate commands:

<pre>
foreman-proxy ALL = NOPASSWD: /usr/sbin/puppetca *
Defaults:foreman-proxy !requiretty
</pre>
